<resources>
  <string name="default_language" translatable="false">mk</string>
  <string name="app_name">MladiInfo</string>
  <string name="restart">Restart</string>
  <string name="more">More</string>
  <string name="internships">Internships</string>
  <string name="scholarships">Scholarships</string>
  <string name="employments">Employments</string>
  <string name="trainings">Trainings</string>
  <string name="educational_institutions">Educational institutions</string>
  <string name="work">Work</string>
  <string name="student_discounts">Student discounts</string>
  <string name="organisations">Organisations</string>
  <string name="student_organizations">Student organizations</string>
  <string name="non_governmental_organization">Non-governmental organization</string>
  <string name="ams">AMS</string>
  <string name="polls">Polls</string>
  <string name="starting_page">Starting page</string>
  <string name="seminars">Seminars</string>
  <string name="conferences">Conferences</string>
  <string name="categories">Categories</string>
  <string name="social_networks">Social networks</string>
  <string name="you_tube" translatable="false">YouTube</string>
  <string name="facebook" translatable="false">Facebook</string>
  <string name="call_phone">Call listed phone number</string>
  <string name="send_email">Send email</string>
  <string name="visit_fb_profile">Visit facebook profile</string>
  <string name="visit_tw_profile">Visit twitter profile</string>
  <string name="show_location_on_map">Show location on map</string>
  <string name="open_website">Open website</string>
  <string name="logo">Logo</string>
  <string name="not_yet_supported">Not yet supported</string>
  <string name="universities">Universities</string>
  <string name="state_universities">State universities</string>
  <string name="private_universities">Private universities</string>
  <string name="other_higher_education_institutions">Other higher education institutions</string>
  <string name="high_schools">High schools</string>
  <string name="dormitories">Dormitories</string>
  <string name="libraries">Libraries</string>
  <string name="eyca" translatable="false">EYCA</string>
  <string name="spukim_edu_card">SPUKIM educard</string>
  <string name="edu_card">Edu card</string>
  <string name="more_info">More info</string>
  <string name="documents">Documents</string>
  <string name="useful_links">Useful links</string>
  <string name="facebook_link" translatable="false">https://www.facebook.com/mladi.ams.mk/</string>
  <string name="youtube_link" translatable="false">https://www.youtube.com/channel/UCo5rT9N_h65BSDn4ImeP-Pw</string>
  <string name="call_ams">Call AMS</string>
  <string name="ams_phone_number" translatable="false">02/3126–270</string>
  <string name="visit_ams_website">Visit AMS website</string>
  <string name="abs_website_url" translatable="false">http://ams.gov.mk/</string>
  <string name="ams_news">AMS news</string>
  <string name="trending">Trending</string>
  <string name="projects">Projects</string>
  <string name="enable_notifications_for_this_list">Notifications for this listing</string>
  <string name="about_application">About this app</string>
  <string name="enable_notifications">Enable notifications</string>
  <string name="new_mladiinfo_articles">New MladiInfo articles</string>
  <string name="no_internet_connection_available">No internet connection available</string>
  <string name="server_fail_offline_fail">Connection to server has failed and no available offline data is available</string>
  <string name="mark_as_read">Mark as read</string>
  <string name="open_on_github">Open on GitHub</string>
  <string name="github_link" translatable="false">https://github.com/toteto/MladiInfo</string>
  <string name="developer_mail" translatable="false">antonioivanovski@gmail.com</string>
  <string name="notifications">Notifications</string>
  <string name="contact_the_developer">Contact developer</string>
  <string name="choose_language">Choose language:</string>
  <string name="cancel">Cancel</string>
  <string name="confirm">Confirm</string>
  <string name="search">Search</string>
</resources>
